--- a/index.html
+++ b/index.html
@@ -11,42 +11,29 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!-- Header -->
-    <header class="header">
-      <nav class="navigation">
+    <header class="container header-container">
+      <!-- <nav class="navigation"> -->
         <p>
-          <a class="logo" href="./index.html" lang="en"
-            >Web<span class="logo-studio">Studio</span></a
-          >
+          <a class="logo" href="./index.html" lang="en">Web<span class="logo-studio">Studio</span></a>
         </p>
         <ul class="list menu">
           <li class="menu-item">
             <a
-              class="menu-link link"
-              href="./index.html"
-              target="_blank"
-              title="Студия"
-              rel="noopener noreferrer"
-              >Студия</a
-            >
+              class="menu-link link" href="./index.html" title="Студия">Студия</a>
           </li>
           <li class="menu-item">
             <a
-              class="menu-link link"
-              href="./portfolio.html"
-              target="_blank"
-              title="Портфолио"
-              rel="noopener noreferrer"
-              >Портфолио</a
-            >
+              class="menu-link link" href="./portfolio.html" title="Портфолио">Портфолио</a>
           </li>
           <li class="menu-item"><a class="menu-link link" href="">Контакты</a></li>
         </ul>
-      </nav>
+      <!-- </nav> -->
 
       <ul class="list contacts-list">
         <li class="contact-item">
@@ -56,11 +43,12 @@
           <a class="link contact-phone" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
+    
     </header>
     <!-- Main -->
     <main>
-      <div>
-        <section class="section-hero">
+      <section class="section-hero">
+      <div class="container">
           <h1 class="hero">
             Эффективные решения
             <br />для вашего бизнеса
@@ -69,12 +57,13 @@
         </section>
       </div>
 
-      <section class="benefits">
+      <section class="benefits section">
+        <div class="container">
         <ul class="list benefits-list">
           <li class="benefits-item">
             <h3 class="benefits-title">Внимание к деталям</h3>
             <p class="benefits-subtitle">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
+              Идейные соображения, а также <br> начало повседневной работы по формированию позиции.
             </p>
           </li>
           <li class="benefits-item">
@@ -96,9 +85,11 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
 
-      <section class="about">
+      <section class="about section">
+        <div class="container">
         <h2 class="about-title">Чем мы занимаемся</h2>
         <ul class="list about-list">
           <li class="about-item">
@@ -126,43 +117,46 @@
             />
           </li>
         </ul>
+      </div>
       </section>
 
-      <section class="our-team">
+      <section class="our-team section">
+        <div class="container">
         <h2 class="our-team-title">Наша команда</h2>
         <ul class="list our-team-list">
           <li class="our-team-item">
             <img class="team-img" src="./images/img.jpg" alt="фото Игоря Демьяненко" width="270" />
-            <h2 class="team-title">Игорь Демьяненко</h2>
-            <p class="team-subtitle" lang="en">Product Designer</p>
+            <div class="team-card-wrapper"><h2 class="team-title">Игорь Демьяненко</h2>
+            <p class="team-subtitle" lang="en">Product Designer</p></div>
           </li>
 
           <li class="our-team-item">
             <img class="team-img" src="./images/img1.jpg" alt="фото Ольги Репиной" width="270" />
-            <h2 class="team-title">Ольга Репина</h2>
-            <p class="team-subtitle" lang="en">Frontend Developer</p>
+            <div class="team-card-wrapper"><h2 class="team-title">Ольга Репина</h2>
+            <p class="team-subtitle" lang="en">Frontend Developer</p></div>
           </li>
 
           <li class="our-team-item">
             <img class="team-img" src="./images/img2.jpg" alt="фото Николая Тарасова" width="270" />
-            <h2 class="team-title">Николай Тарасов</h2>
-            <p class="team-subtitle" lang="en">Marketing</p>
+            <div class="team-card-wrapper"><h2 class="team-title">Николай Тарасов</h2>
+            <p class="team-subtitle" lang="en">Marketing</p></div>
           </li>
 
           <li class="our-team-item">
             <img class="team-img" src="./images/img3.jpg" alt="фото Михаила Ермакова" width="270" />
-            <h2 class="team-title">Михаил Ермаков</h2>
-            <p class="team-subtitle" lang="en">UI Designer</p>
+            <div class="team-card-wrapper"><h2 class="team-title">Михаил Ермаков</h2>
+            <p class="team-subtitle" lang="en">UI Designer</p></div>
           </li>
         </ul>
+      </div>
       </section>
     </main>
 
     <footer class="footer">
-      <p>
+      <div class="footer-logo container"><p>
         <a class="logo" href="/" lang="en">Web<span class="logo-studio-white">Studio</span></a>
-      </p>
-      <address>
+      </p></div>
+      <div class="footer-adress-wrapper container"><address class="footer-adress">
         <a
           class="link address"
           target="_blank"
@@ -179,6 +173,7 @@
           <a class="link footer-phone" href="tel:+380991111111">+38 099 111 11 11</a>
         </li>
       </ul>
+    </div>
     </footer>
   </body>
 </html>
