--- a/portfolio.html
+++ b/portfolio.html
@@ -11,24 +11,24 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Header section-->
-    <header>
+    <header class="header">
+      <div class="container header-container">
       <p>
         <a class="logo" href="./index.html" lang="en">Web<span class="logo-studio">Studio</span></a>
       </p>
       <ul class="list menu">
         <li class="menu-item">
-          <a class="menu-link link" href="./index.html" target="_blank" rel="noopener noreferrer"
-            >Студия</a
-          >
+          <a class="menu-link link" href="./index.html">Студия</a>
         </li>
         <li class="menu-item"><a class="menu-link link" href="">Портфолио</a></li>
         <li class="menu-item"><a class="menu-link link" href="">Контакты</a></li>
       </ul>
-      <ul class="list">
+      <ul class="list contacts-list">
         <li class="contact-item">
           <a class="link contact-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -36,11 +36,12 @@
           <a class="link contact-phone" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
+    </div>
     </header>
     <!--Main section-->
     <main>
       <!-- Filter section -->
-      <section class="filter">
+      <section class="filter container section">
         <h1 hidden>Портфолио</h1>
         <ul class="list filter-list">
           <li class="filter-item">
@@ -59,9 +60,7 @@
             <button class="filter-btn" type="button">Маркетинг</button>
           </li>
         </ul>
-      </section>
-      <!-- Section Portfolio -->
-      <section class="portfolio">
+      
         <ul class="list portfolio-list">
           <li class="portfolio-item">
             <img
@@ -70,8 +69,8 @@
               width="370"
               height="290"
             />
-            <h2 class="portfolio-title">Технокряк</h2>
-            <p class="portfolio-subtitle">Веб-сайт</p>
+            <div class="portfolio-card-wrapper"><h2 class="portfolio-title">Технокряк</h2>
+            <p class="portfolio-subtitle">Веб-сайт</p></div>
           </li>
           <li class="portfolio-item">
             <img
@@ -80,8 +79,8 @@
               width="370"
               height="290"
             />
-            <h2 class="portfolio-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
-            <p class="portfolio-subtitle">Дизайн</p>
+            <div class="portfolio-card-wrapper"><h2 class="portfolio-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
+            <p class="portfolio-subtitle">Дизайн</p></div>
           </li>
           <li class="portfolio-item">
             <img
@@ -90,8 +89,8 @@
               width="370"
               height="290"
             />
-            <h2 class="portfolio-title">Ресторан<span lang="en">Seafood</span></h2>
-            <p class="portfolio-subtitle">Приложение</p>
+            <div class="portfolio-card-wrapper"><h2 class="portfolio-title">Ресторан<span lang="en">Seafood</span></h2>
+            <p class="portfolio-subtitle">Приложение</p></div>
           </li>
           <li class="portfolio-item">
             <img
@@ -100,13 +99,13 @@
               width="370"
               height="290"
             />
-            <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
-            <p class="portfolio-subtitle">Маркетинг</p>
+            <div class="portfolio-card-wrapper"><h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
+            <p class="portfolio-subtitle">Маркетинг</p></div>
           </li>
           <li class="portfolio-item">
             <img src="./images/Portfolio/boxes.jpg" alt="Две коробки" width="370" height="290" />
-            <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
-            <p class="portfolio-subtitle">Приложение</p>
+            <div class="portfolio-card-wrapper"><h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
+            <p class="portfolio-subtitle">Приложение</p></div>
           </li>
           <li class="portfolio-item">
             <img
@@ -115,8 +114,8 @@
               width="370"
               height="290"
             />
-            <h2 class="portfolio-title"><span lang="en">Inspiration has no Borders</span></h2>
-            <p class="portfolio-subtitle">Веб-сайт</p>
+            <div class="portfolio-card-wrapper"><h2 class="portfolio-title"><span lang="en">Inspiration has no Borders</span></h2>
+            <p class="portfolio-subtitle">Веб-сайт</p></div>
           </li>
           <li class="portfolio-item">
             <img
@@ -125,8 +124,8 @@
               width="370"
               height="290"
             />
-            <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
-            <p class="portfolio-subtitle">Дизайн</p>
+            <div class="portfolio-card-wrapper"><h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
+            <p class="portfolio-subtitle">Дизайн</p></div>
           </li>
           <li class="portfolio-item">
             <img
@@ -135,8 +134,8 @@
               width="370"
               height="290"
             />
-            <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
-            <p class="portfolio-subtitle">Маркетинг</p>
+            <div class="portfolio-card-wrapper"><h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
+            <p class="portfolio-subtitle">Маркетинг</p></div>
           </li>
           <li class="portfolio-item">
             <img
@@ -145,22 +144,22 @@
               width="370"
               height="290"
             />
-            <h2 class="portfolio-title"><span lang="en">Growing Business</span></h2>
-            <p class="portfolio-subtitle">Приложение</p>
+            <div class="portfolio-card-wrapper"><h2 class="portfolio-title"><span lang="en">Growing Business</span></h2>
+            <p class="portfolio-subtitle">Приложение</p></div>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer section -->
     <footer class="footer">
-      <p>
-        <a class="logo" href="./index.html" target="_blank" rel="noopener noreferrer"
-          >Web<span class="logo-studio-white">Studio</span></a
-        >
-      </p>
-      <address>
+      <div class="footer-logo container"><p>
+        <a class="logo" href="/" lang="en">Web<span class="logo-studio-white">Studio</span></a>
+      </p></div>
+      <div class="footer-adress-wrapper container"><address class="footer-adress">
         <a
           class="link address"
+          target="_blank"
+          rel="noopener noreferrer"
           href="https://www.google.com/maps?q=%D0%B3+%D0%BA%D0%B8%D0%B5%D0%B2+%D0%BF%D1%80%D0%BE%D1%81%D0%BF%D0%B5%D0%BA%D1%82+%D0%BB%D0%B5%D1%81%D0%B8+%D1%83%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8+26&um=1&ie=UTF-8&sa=X&ved=2ahUKEwj_-ZnG1bH4AhXhpYsKHVMVDdgQ_AUoAXoECAEQAw"
           >г. Киев, пр-т Леси Украинки, 26</a
         >
@@ -173,6 +172,7 @@
           <a class="link footer-phone" href="tel:+380991111111">+38 099 111 11 11</a>
         </li>
       </ul>
+    </div>
     </footer>
   </body>
 </html>
