--- a/portfolio.html
+++ b/portfolio.html
@@ -41,8 +41,8 @@
     <!--Main section-->
     <main>
       <!-- Filter section -->
-      <section class="filter container section">
-        <h1 hidden>Портфолио</h1>
+      <section class="filter container">
+        <div class="section"><h1 hidden>Портфолио</h1>
         <ul class="list filter-list">
           <li class="filter-item">
             <button class="filter-btn" type="button">Все</button>
@@ -148,6 +148,7 @@
             <p class="portfolio-subtitle">Приложение</p></div>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <!-- Footer section -->
